mType/tests/testFiles/import/pass/modules/sub1/RelativeModule1.mt
class RelativeClass1 {
    public function getValue(): int {
        return 1;
    }
}
