mType/tests/testFiles/import/error/circular_b.mt
import "circular_a.mt";
        function funcB(): int {
            return 2;
        }